<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.jingpai.pos.customer.views.CustomToolBar
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:title="@string/forget_password_title"
        android:id="@+id/toolbar"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/dime_32dp"
        android:layout_marginRight="@dimen/dime_32dp"
        android:layout_marginTop="@dimen/dime_64dp"
        android:orientation="horizontal">

        <com.jingpai.pos.customer.custom.ZpPhoneEditText
            android:id="@+id/forget_et_user_phone"
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/transparent"
            android:hint="@string/plaess_phone_login"
            android:padding="@dimen/dime_12dp"
            android:singleLine="true"
            android:inputType="phone"
            android:textColor="@color/black"
            android:textColorHint="@color/text_97"
            android:textCursorDrawable="@drawable/shape_my_cursor"
            android:textSize="@dimen/dime_16sp" />

        <ImageView
            android:id="@+id/forget_clean_phone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="@dimen/dime_16dp"
            android:layout_marginEnd="@dimen/dime_16dp"
            android:src="@mipmap/icon_delete" />
    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="@dimen/dime_0_5dp"
        android:layout_marginLeft="@dimen/dime_32dp"
        android:layout_marginRight="@dimen/dime_32dp"
        android:layout_marginTop="@dimen/dime_1dp"
        android:background="@color/line_f0" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/dime_32dp"
        android:layout_marginRight="@dimen/dime_32dp"
        android:layout_marginTop="@dimen/dime_24dp"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/forget_et_verification_code"
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/transparent"
            android:inputType="number"
            android:hint="@string/plaess_verification_code"
            android:padding="@dimen/dime_12dp"
            android:maxLength="4"
            android:singleLine="true"
            android:textColor="@color/black"
            android:textColorHint="@color/text_97"
            android:textCursorDrawable="@drawable/shape_my_cursor"
            android:textSize="@dimen/dime_16sp" />

        <TextView
            android:id="@+id/forget_verification_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="@dimen/dime_16dp"
            android:layout_marginEnd="@dimen/dime_16dp"
            android:text="@string/get_verification_code"
            android:textColor="@color/main"
            android:textSize="@dimen/dime_16sp" />
    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="@dimen/dime_0_5dp"
        android:layout_marginLeft="@dimen/dime_32dp"
        android:layout_marginRight="@dimen/dime_32dp"
        android:layout_marginTop="@dimen/dime_1dp"
        android:background="@color/line_f0" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/dime_32dp"
        android:layout_marginRight="@dimen/dime_32dp"
        android:layout_marginTop="@dimen/dime_24dp"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/forget_et_passwords"
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/transparent"
            android:hint="@string/register_new_password_length"
            android:padding="@dimen/dime_12dp"
            android:singleLine="true"
            android:inputType="textPassword"
            android:textColor="@color/black"
            android:textColorHint="@color/text_97"
            android:textCursorDrawable="@drawable/shape_my_cursor"
            android:textSize="@dimen/dime_16sp" />

        <ImageView
            android:id="@+id/for_password_iv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="@dimen/dime_16dp"
            android:layout_marginEnd="@dimen/dime_16dp"
            android:background="@mipmap/icon_hide" />
    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="@dimen/dime_0_5dp"
        android:layout_marginLeft="@dimen/dime_32dp"
        android:layout_marginRight="@dimen/dime_32dp"
        android:layout_marginTop="@dimen/dime_1dp"
        android:background="@color/line_f0" />

    <TextView
        android:id="@+id/forget_password_tv"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dime_48dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginStart="@dimen/dime_16dp"
        android:layout_marginTop="@dimen/dime_65dp"
        android:layout_marginEnd="@dimen/dime_16dp"
        android:background="@drawable/button_login_shape"
        android:gravity="center"
        android:text="@string/text_name"
        android:textColor="@color/white"
        android:textSize="@dimen/dime_16sp" />



</LinearLayout>