<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/login_name_ll"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/dime_32dp"
        android:layout_marginRight="@dimen/dime_32dp"
        android:layout_marginTop="@dimen/dime_68dp"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:src="@drawable/ic_my" />

        <com.jingpai.pos.customer.custom.ZpPhoneEditText
            android:id="@+id/et_user_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dime_8dp"
            android:textColor="@color/black"
            android:textColorHint="@color/text_97"
            android:background="@color/transparent"
            android:textCursorDrawable="@drawable/shape_my_cursor"
            android:hint="@string/plaess_login"
            android:padding="@dimen/dime_12dp"
            android:singleLine="true"
            android:inputType="phone"
            android:textSize="@dimen/dime_16sp" />
    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="@dimen/dime_0_5dp"
        android:layout_marginLeft="@dimen/dime_32dp"
        android:layout_marginRight="@dimen/dime_32dp"
        android:layout_marginTop="@dimen/dime_1dp"
        android:background="@color/line_f0" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/dime_32dp"
        android:layout_marginRight="@dimen/dime_32dp"
        android:layout_marginTop="@dimen/dime_24dp"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:src="@drawable/ic_pass" />

        <EditText
            android:id="@+id/et_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dime_8dp"
            android:background="@color/transparent"
            android:hint="@string/plaess_password"
            android:digits="@string/register_name_digits"
            android:padding="@dimen/dime_12dp"
            android:singleLine="true"
            android:textCursorDrawable="@drawable/shape_my_cursor"
            android:inputType="textPassword"
            android:textColor="@color/black"
            android:textColorHint="@color/text_97"
            android:textSize="@dimen/dime_16sp" />
    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="@dimen/dime_0_5dp"
        android:layout_marginBottom="@dimen/dime_5dp"
        android:layout_marginLeft="@dimen/dime_32dp"
        android:layout_marginRight="@dimen/dime_32dp"
        android:layout_marginTop="@dimen/dime_1dp"
        android:background="@color/line_f0" />


    <TextView
        android:id="@+id/login_no_password_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        android:layout_marginRight="@dimen/dime_16dp"
        android:layout_marginTop="@dimen/dime_16dp"
        android:autoLink="all"
        android:text="@string/home_login_no_password"
        android:textColor="@color/text_97"
        android:textSize="@dimen/dime_14sp"
        android:visibility="gone" />
</LinearLayout>
