<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/white"
    android:clipChildren="false"
    android:orientation="vertical">

    <com.jingpai.pos.customer.views.CustomToolBar
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/toolbar"
        app:title="@string/car_add"
        />

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/dime_2dp"
        android:layout_marginTop="@dimen/dp_50"
        android:background="#F0F0F0"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_50"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="46dp"
            android:paddingRight="46dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dime_32dp"
                android:layout_marginBottom="@dimen/dp_24"
                android:gravity="center"
                android:text="@string/plate_number_tip"
                android:textColor="@color/text_color"
                android:textSize="@dimen/dime_20sp"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:gravity="end">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/dime_8sp"
                    android:textColor="@color/new_energy"
                    android:layout_marginRight="@dimen/dp_4"
                    android:text="+新能源"/>

                <LinearLayout
                    android:id="@+id/plate_number_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                </LinearLayout>
            </LinearLayout>
        </LinearLayout>

    </LinearLayout>

    <TextView
        android:id="@+id/add_car_btn"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dime_48dp"
        android:layout_gravity="center_horizontal|bottom"
        android:layout_marginStart="@dimen/dime_16dp"
        android:layout_marginTop="@dimen/dime_65dp"
        android:layout_marginEnd="@dimen/dime_16dp"
        android:layout_marginBottom="@dimen/dime_16dp"
        android:background="@drawable/button_login_shape"
        android:gravity="center"
        android:text="@string/yes"
        android:textColor="@color/white"
        android:textSize="@dimen/dime_16sp"
        />

    <LinearLayout
        android:id="@+id/keyboard_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:background="@color/home_line_1"
        android:orientation="vertical">
    </LinearLayout>
</FrameLayout>
