<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:id="@+id/rl_main"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dime_40dp"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tv_login_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/dime_32dp"
                android:layout_marginTop="@dimen/dime_60dp"
                android:text="@string/login_password"
                android:textColor="@color/home_black"
                android:textSize="@dimen/dime_30sp" />

            <include layout="@layout/include_home_login_name" />

            <TextView
                android:id="@+id/login"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dime_48dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginStart="@dimen/dime_16dp"
                android:layout_marginTop="@dimen/dime_65dp"
                android:layout_marginEnd="@dimen/dime_16dp"
                android:layout_marginBottom="@dimen/dime_16dp"
                android:background="@drawable/button_login_shape"
                android:gravity="center"
                android:text="@string/login"
                android:textColor="@color/white"
                android:textSize="@dimen/dime_16sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/register_tv"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="center_horizontal"
                android:text="用户注册"
                android:textColor="@color/main"
                android:textSize="@dimen/dime_14sp"
                android:visibility="gone" />
            <View
                android:layout_marginStart="@dimen/dime_16dp"
                android:layout_width="@dimen/dime_1dp"
                android:layout_height="@dimen/dime_13dp"
                android:visibility="gone"
                android:background="#fff1f1f1"
                />
            <TextView
                android:id="@+id/forget_password_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/home_login_no_password"
                android:textColor="@color/text_97"
                android:textSize="@dimen/dime_14sp" />


        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="horizontal"
        android:gravity="center"
        android:visibility="gone"
        android:layout_marginBottom="@dimen/dp_60">
        <TextView
            android:id="@+id/tv_server_agreement"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="用户服务协议"
            android:textColor="@color/main"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="和"
            android:textColor="@color/text_97"
            android:layout_marginLeft="@dimen/dp_5"
            android:layout_marginRight="@dimen/dp_5"/>
        <TextView
            android:id="@+id/tv_privacy_agreement"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="用户隐私协议"
            android:textColor="@color/main"/>
    </LinearLayout>

</RelativeLayout>

