<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.payment.CheckOutActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <com.jingpai.pos.customer.views.CustomToolBar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:title="@string/check_out" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="52dp"
            android:layout_marginTop="@dimen/dp_8"
            android:background="@color/white"
            android:paddingLeft="@dimen/dime_16dp"
            android:paddingRight="@dimen/dime_16dp">

            <ImageView
                android:id="@+id/iv_pay_money"
                android:layout_width="@dimen/dime_28dp"
                android:layout_height="@dimen/dime_28dp"
                android:layout_centerVertical="true"
                android:src="@drawable/ic_pay_money" />

            <TextView
                android:id="@+id/tv_type"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="@dimen/dp_4"
                android:layout_toRightOf="@id/iv_pay_money"
                android:textColor="@color/text"
                android:textSize="@dimen/dime_18sp" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="62dp"
            android:layout_marginTop="@dimen/dp_8"
            android:background="@color/white"
            android:paddingLeft="@dimen/dime_16dp"
            android:paddingRight="@dimen/dime_16dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:text="@string/pay_money"
                android:textColor="@color/text_33"
                android:textSize="@dimen/dime_16sp" />


            <TextView
                android:id="@+id/tv_money"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:textColor="@color/text_33"
                android:textSize="@dimen/dime_32sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBaseline="@id/tv_money"
                android:layout_centerVertical="true"
                android:layout_toLeftOf="@id/tv_money"
                android:text="@string/rmb"
                android:textColor="@color/text_33"
                android:textSize="@dimen/dime_20sp" />
        </RelativeLayout>

        <RadioGroup
            android:id="@+id/rg_pay"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dime_8dp"
            android:background="@color/white"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/cl_pay_fee">

            <RadioButton
                android:id="@+id/rb_zfb"
                android:layout_width="match_parent"
                android:layout_height="52dp"
                android:layout_marginLeft="@dimen/dp_20"
                android:layout_marginRight="@dimen/dp_20"
                android:button="@null"
                android:checked="true"
                android:background="@color/transparent"
                android:drawableLeft="@drawable/ic_alipay"
                android:drawableRight="@drawable/radio_button_pay_bg"
                android:drawablePadding="@dimen/dime_16dp"
                android:gravity="left|center_vertical"
                android:text="支付宝"
                android:textSize="17sp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_1"
                android:visibility="gone"
                android:background="@color/line_color" />

            <RadioButton
                android:visibility="visible"
                android:id="@+id/rb_wechat"
                android:layout_width="match_parent"
                android:layout_height="52dp"
                android:layout_marginLeft="@dimen/dp_20"
                android:layout_marginRight="@dimen/dp_20"
                android:button="@null"
                android:drawableLeft="@drawable/ic_wechat_pay"
                android:drawableRight="@drawable/radio_button_pay_bg"
                android:drawablePadding="@dimen/dime_16dp"
                android:gravity="left|center_vertical"
                android:text="微信支付"
                android:textSize="17sp" />
            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_1"
                android:visibility="gone"
                android:background="@color/line_color" />

            <RadioButton
                android:visibility="visible"
                android:id="@+id/rb_yinlian"
                android:layout_width="match_parent"
                android:layout_height="52dp"
                android:layout_marginLeft="@dimen/dp_20"
                android:layout_marginRight="@dimen/dp_20"
                android:button="@null"
                android:drawableLeft="@drawable/ic_wechat_pay"
                android:drawableRight="@drawable/radio_button_pay_bg"
                android:drawablePadding="@dimen/dime_16dp"
                android:gravity="left|center_vertical"
                android:text="银行卡支付"
                android:textSize="17sp" />
        </RadioGroup>
    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_80"
        android:layout_alignParentBottom="true"
        android:background="@color/white"
        android:padding="@dimen/dime_16dp">

        <TextView
            android:id="@+id/tv_confirm_pay"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/button_login_shape"
            android:gravity="center"
            android:text="@string/confirm_pay"
            android:textColor="@color/white" />
    </RelativeLayout>
</RelativeLayout>